Fix flickering video overlay color on window resize

--- a/pages/index.htm
+++ b/pages/index.htm
@@ -19,26 +19,26 @@
         <navbar>
             <div class="navrow">
                 <div class="navbookend"></div>
-                <div class="navitem font-bold" style="text-align: right;">
+                <a class="navitem font-bold" style="text-align: right;">
                     <div class="centered">CHRIS CAVALLUZZI</div>
-                </div>
+                </a>
                 <div class="navdivider"></div>
-                <div class="navitem">
+                <a class="navitem">
                     <div class="centered">FRONT-END DEVELOPMENT</div>
-                </div>
-                <div class="navitem">
+                </a>
+                <a class="navitem">
                     <div class="centered">BACK-END DEVELOPMENT</div>
-                </div>
-                <div class="navitem">
+                </a>
+                <a class="navitem">
                     <div class="centered">3D MODELING AND ANIMATION</div>
-                </div>
-                <div class="navitem">
+                </a>
+                <a class="navitem">
                     <div class="centered">VIDEO EDITING</div>
-                </div>
+                </a>
                 <div class="navspace"></div>
-                <div class="navitem font-bold">
+                <a class="navitem font-bold">
                     <div class="centered">CONTACT</div>
-                </div>
+                </a>
                 <div class="navbookend"></div>
             </div>
         </navbar>
